kubernetes/data-lakehouse/base/machine-learning/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: data
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
