kubernetes/data-lakehouse/base/machine-learning/mlflow/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mlflow
  namespace: data
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mlflow.${cluster_domain}`)
      kind: Rule
      services:
        - name: mlflow
          port: 5678
